@@ -1,3 +1,8 @@
+2013-08-13  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tools/tiff2pdf.c: terminate after failure of allocating 
+	ycbcr buffer (bug #2449, CVE-2013-4232)
+
 2013-07-09  Frank Warmerdam  <warmerdam@google.com>
 
 	* tools/tiffinfo.c: Default various values fetched with 
